# chisel_simple_rv64

./: .gitignore  README.md  build.sbt  build.sc
fpga_projects/: .gitignore
fpga_projects/de2_ram_test/: simple_ram_test.qpf  simple_ram_test.qsf  simple_ram_test.qws  simple_ram_test.sv  sseg.v
fpga_projects/de2_ram_test/db/: prev_cmp_simple_ram_test.qmsg  simple_ram_test.(0).cnf.cdb  simple_ram_test.(0).cnf.hdb  simple_ram_test.(1).cnf.cdb  simple_ram_test.(1).cnf.hdb  simple_ram_test.(2).cnf.cdb  simple_ram_test.(2).cnf.hdb  simple_ram_test.(3).cnf.cdb  simple_ram_test.(3).cnf.hdb  simple_ram_test.asm.qmsg  simple_ram_test.asm.rdb  simple_ram_test.asm_labs.ddb  simple_ram_test.cmp.bpm  simple_ram_test.cmp.cdb  simple_ram_test.cmp.hdb  simple_ram_test.cmp.idb  simple_ram_test.cmp.kpt  simple_ram_test.cmp.rdb  simple_ram_test.cmp0.ddb  simple_ram_test.cmp1.ddb  simple_ram_test.cmp2.ddb  simple_ram_test.cmp_merge.kpt  simple_ram_test.db_info  simple_ram_test.fit.qmsg  simple_ram_test.hier_info  simple_ram_test.hif  simple_ram_test.lpc.html  simple_ram_test.lpc.rdb  simple_ram_test.lpc.txt  simple_ram_test.map.bpm  simple_ram_test.map.cdb  simple_ram_test.map.hdb  simple_ram_test.map.kpt  simple_ram_test.map.qmsg  simple_ram_test.map.rdb  simple_ram_test.map_bb.cdb  simple_ram_test.map_bb.hdb  simple_ram_test.pre_map.hdb  simple_ram_test.root_partition.map.reg_db.cdb  simple_ram_test.routing.rdb  (+9 more)
fpga_projects/de2_ram_test/output_files/: simple_ram_test.asm.rpt  simple_ram_test.done  simple_ram_test.fit.rpt  simple_ram_test.fit.summary  simple_ram_test.flow.rpt  simple_ram_test.jdi  simple_ram_test.map.rpt  simple_ram_test.map.smsg  simple_ram_test.map.summary  simple_ram_test.pin  simple_ram_test.pof  simple_ram_test.sof  simple_ram_test.sta.rpt  simple_ram_test.sta.summary
fpga_projects/simple_ram_test/: simple_ram_test.qpf  simple_ram_test.qsf  simple_ram_test.qws  simple_ram_test.sv
fpga_projects/simple_ram_test/db/: .cmp.kpt  prev_cmp_simple_ram_test.qmsg  simple_ram_test.(0).cnf.cdb  simple_ram_test.(0).cnf.hdb  simple_ram_test.(1).cnf.cdb  simple_ram_test.(1).cnf.hdb  simple_ram_test.(11).cnf.cdb  simple_ram_test.(11).cnf.hdb  simple_ram_test.(12).cnf.cdb  simple_ram_test.(12).cnf.hdb  simple_ram_test.(13).cnf.cdb  simple_ram_test.(13).cnf.hdb  simple_ram_test.(14).cnf.cdb  simple_ram_test.(14).cnf.hdb  simple_ram_test.(15).cnf.cdb  simple_ram_test.(15).cnf.hdb  simple_ram_test.(16).cnf.cdb  simple_ram_test.(16).cnf.hdb  simple_ram_test.(17).cnf.cdb  simple_ram_test.(17).cnf.hdb  simple_ram_test.(2).cnf.cdb  simple_ram_test.(2).cnf.hdb  simple_ram_test.(3).cnf.cdb  simple_ram_test.(3).cnf.hdb  simple_ram_test.(4).cnf.cdb  simple_ram_test.(4).cnf.hdb  simple_ram_test.(5).cnf.cdb  simple_ram_test.(5).cnf.hdb  simple_ram_test.(6).cnf.cdb  simple_ram_test.(6).cnf.hdb  simple_ram_test.(8).cnf.cdb  (+54 more)
fpga_projects/system/: output_file.map  system.qpf  system.qsf  system.qws  system.sv
simulation/: CMakeLists.txt  opcode.dict  top.gtkw  top_full.gtkw
simulation/src/: CRC32Test.cpp  FullSystemTest.cpp  rv_sim.cpp  sdramsim.cpp  sdramsim.h  testbench.h  wbsdram_sim.cpp
simulation/tests/: objcopy.sh  rv32ui-p-add  rv32ui-p-add.dump  rv32ui-p-addi  rv32ui-p-addi.dump  rv32ui-p-and  rv32ui-p-and.dump  rv32ui-p-andi  rv32ui-p-andi.dump  rv32ui-p-auipc  rv32ui-p-auipc.dump  rv32ui-p-beq  rv32ui-p-beq.dump  rv32ui-p-bge  rv32ui-p-bge.dump  rv32ui-p-bgeu  rv32ui-p-bgeu.dump  rv32ui-p-blt  rv32ui-p-blt.dump  rv32ui-p-bltu  rv32ui-p-bltu.dump  rv32ui-p-bne  rv32ui-p-bne.dump  rv32ui-p-fence_i  rv32ui-p-fence_i.dump  rv32ui-p-jal  rv32ui-p-jal.dump  rv32ui-p-jalr  rv32ui-p-jalr.dump  rv32ui-p-lb  rv32ui-p-lb.dump  rv32ui-p-lbu  rv32ui-p-lbu.dump  rv32ui-p-lh  rv32ui-p-lh.dump  rv32ui-p-lhu  rv32ui-p-lhu.dump  rv32ui-p-lui  rv32ui-p-lui.dump  rv32ui-p-lw  (+39 more)
software/: .gitignore  CMakeLists.txt  Makefile  a.dump  a.numeric.dump  entry.s  hardware.h  linker.ld  main.c
software/inc/: hardware.h  mii_net.h  system.h
software/inc/net/: ethernet.h
software/lib/: printf.c
software/src/: main.c  mii_net.c  system.c
software/src_asm/: entry.s
(+252 files in other folders)
